# adventofcode

./: .gitignore  .sqlfluff  README.md  build.sbt  settings.json
2015/: .gitignore  day1.py  day10.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  helper.py
2019/: .gitignore  Makefile  aoc.cpp
2019/source/: all_days.h  aoc.cpp  day.cpp  day.h  day.hpp  day01.cpp  day01.h  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day05.hpp  day06.cpp  day07.cpp  days.cpp  days.h
2020/: create_table.sql  day1.sql  day2.sql  day3.sql  day4.sql  day5.sql  day6.sql  day7.sql  input.py  requirements.txt  run.py
2020/solutions/: day1.sql  day10.sql  day2.sql  day3.sql  day4.sql  day5.sql  day7.sql  day7_part1.sql  day7_part2.sql  day8.sql  day8_part1.sql  day8_part2.sql  day9.sql
2021/: README.md
2022/: .gitignore  README.md
2023/: data.py  input.py  requirements.txt  run.py
2023/solutions/: __init__.py  day1.py  day1.sql  day2.py  day2.sql  day3.py  day3.sql  day4.py  day4.sql  day5.py  day6.py  day7.py  day8.py  test.json
2024/: data.py  run.py
2024/demo/: day7.txt
2024/solutions/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
advendofcode/: README.md
advendofcode/2015/: .gitignore  day1.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day9.py  helper.py
advendofcode/2019/: build.ps1
i18n/: Cargo.toml  solution1.rs
i18n/src/: file.rs  solution1.rs  solution2.rs  solution3.rs  solution4.rs
i18n/src/util/: crossword.rs  file.rs  mod.rs
(+100 files in other folders)
