[package]
name = "i18n"
version = "0.1.4"
edition = "2024"

[dependencies]
chrono = "0.4"
chrono-tz = "0.10.4"
itertools = "0.14"
regex = "1.11"

[[bin]]
name = "s1"
path = "src/solution1.rs"

[[bin]]
name = "s2"
path = "src/solution2.rs"

[[bin]]
name = "s3"
path = "src/solution3.rs"

[[bin]]
name = "s4"
path = "src/solution4.rs"
