[package]
name = "i18n"
version = "0.1.12"
edition = "2024"

[dependencies]
bcrypt = "0.17"
chrono = "0.4"
chrono-tz = "0.10"
dotenv = "0.15"
encoding = "0.2"
itertools = "0.14"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
unicode-normalization = "0.1"
unidecode = "0.3"
